loopfor.LoopFor.scala.code
var case:int=0